...
        textView.isGrammarCheckingEnabled = false
        textView.font = .monospacedSystemFont(ofSize: fontSize, weight: .regular)
        textView.textContainerInset = NSSize(width: 8, height: 8)
        textView.backgroundColor = .textBackgroundColor
        textView.textColor = .textColor
        textView.insertionPointColor = .textColor
        textView.setAccessibilityIdentifier("editor")

        scrollView.documentView = textView
        configureWrapping(textView: textView, scrollView: scrollView)
        context.coordinator.lastFocusRequest = focusRequest
        focus(textView)
        return scrollView
...
